@@ -1,6 +1,6 @@
 <?php
 
-namespace Diff\Test;
+namespace Diff\Tests;
 
 use Diff\Diff;
 use Diff\DiffOp;
@@ -8,7 +8,6 @@ use Diff\MapDiff;
 use Diff\DiffOpAdd;
 use Diff\DiffOpRemove;
 use Diff\DiffOpChange;
-use InvalidArgumentException;
 use stdClass;
 
 /**
@@ -40,7 +39,7 @@ use stdClass;
  * @licence GNU GPL v2+
  * @author Jeroen De Dauw < jeroendedauw@gmail.com >
  */
-class DiffTest extends \PHPUnit_Framework_TestCase {
+class DiffTest extends DiffTestCase {
 
 	public function elementInstancesProvider() {
 		return array(
@@ -609,51 +608,6 @@ class DiffTest extends \PHPUnit_Framework_TestCase {
 		$copy = $copy->getArrayCopy();
 
 		$this->assertArrayEquals( $list, $copy, true, true );
-	}
-
-	/**
-	 * Assert that two arrays are equal. By default this means that both arrays need to hold
-	 * the same set of values. Using additional arguments, order and associated key can also
-	 * be set as relevant.
-	 *
-	 * @since 0.6
-	 *
-	 * @param array $expected
-	 * @param array $actual
-	 * @param boolean $ordered If the order of the values should match
-	 * @param boolean $named If the keys should match
-	 */
-	protected function assertArrayEquals( array $expected, array $actual, $ordered = false, $named = false ) {
-		if ( !$ordered ) {
-			$this->objectAssociativeSort( $expected );
-			$this->objectAssociativeSort( $actual );
-		}
-
-		if ( !$named ) {
-			$expected = array_values( $expected );
-			$actual = array_values( $actual );
-		}
-
-		call_user_func_array(
-			array( $this, 'assertEquals' ),
-			array_merge( array( $expected, $actual ), array_slice( func_get_args(), 4 ) )
-		);
-	}
-
-	/**
-	 * Does an associative sort that works for objects.
-	 *
-	 * @since 0.6
-	 *
-	 * @param array $array
-	 */
-	protected function objectAssociativeSort( array &$array ) {
-		uasort(
-			$array,
-			function ( $a, $b ) {
-				return serialize( $a ) > serialize( $b ) ? 1 : -1;
-			}
-		);
 	}
 
 }
