@@ -1,6 +1,6 @@
 <?php
 
-namespace Diff\Test;
+namespace Diff\Tests;
 use Diff\DiffOpRemove;
 use Diff\DiffOpAdd;
 use Diff\ListDiffer;
@@ -38,7 +38,7 @@ use Diff\Diff;
 class ListDiffTest extends DiffOpTest {
 
 	/**
-	 * @see AbstractTestCase::getClass
+	 * @see DiffOpTest::getClass
 	 *
 	 * @since 0.1
 	 *
@@ -49,7 +49,7 @@ class ListDiffTest extends DiffOpTest {
 	}
 
 	/**
-	 * @see AbstractTestCase::constructorProvider
+	 * @see DiffOpTest::constructorProvider
 	 *
 	 * @since 0.1
 	 */
