@@ -1,6 +1,7 @@
 <?php
 
-namespace Diff\Test;
+namespace Diff\Tests;
+
 use Diff\Diff;
 use Diff\MapDiff;
 use Diff\DiffOpRemove;
@@ -42,7 +43,7 @@ use Diff\ListDiffer;
 class MapDiffTest extends DiffOpTest {
 
 	/**
-	 * @see AbstractTestCase::getClass
+	 * @see DiffOpTest::getClass
 	 *
 	 * @since 0.1
 	 *
@@ -53,7 +54,7 @@ class MapDiffTest extends DiffOpTest {
 	}
 
 	/**
-	 * @see AbstractTestCase::constructorProvider
+	 * @see DiffOpTest::constructorProvider
 	 *
 	 * @since 0.1
 	 */
