@@ -1,6 +1,8 @@
 <?php
 
-namespace Diff\Test;
+namespace Diff\Tests;
+
+use Diff\MapPatcher;
 use Diff\Patcher;
 use Diff\Diff;
 use Diff\DiffOpRemove;
@@ -35,7 +37,7 @@ use Diff\DiffOpAdd;
  * @licence GNU GPL v2+
  * @author Jeroen De Dauw < jeroendedauw@gmail.com >
  */
-class ListPatcherTest extends \MediaWikiTestCase {
+class ListPatcherTest extends DiffTestCase {
 
 	public function patchProvider() {
 		$argLists = array();
@@ -161,7 +163,7 @@ class ListPatcherTest extends \MediaWikiTestCase {
 	 * @param string|null $message
 	 */
 	public function testGetApplicableDiff( Diff $diff, array $currentObject, Diff $expected, $message = null ) {
-		$patcher = new \Diff\MapPatcher();
+		$patcher = new MapPatcher();
 		$actual = $patcher->getApplicableDiff( $currentObject, $diff );
 
 		$this->assertEquals( $expected->getOperations(), $actual->getOperations(), $message );
